# jaxels-work-trial

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: validation.yml
configs/eval/: openhands-swebench-verified-qwen25-coder-7b-base-native-32k.args  openhands-swebench-verified-qwen25-coder-7b-base-paper-yarn-128k.args  openhands-swebench-verified-qwen25-coder-7b-paper-yarn-128k.args  openhands-swebench-verified-swe-lego-qwen3-8b.args
configs/training/: qwen25-coder-7b-direct-to-hero.args
docs/: model_dataset_choice.md  openhands_swebench_gpu_pod_eval.md  python_uv_project.md  script_conversion_experiments.md  swehero_torchtitan_pod.md
manifests/: midtraining-hostpath.yaml  openhands-eval-driver.yaml
notes/: swe-hero-dataset-discrepancy.md
requirements/: openhands-vllm.txt  torchtitan-pod-cu128.txt
scripts/: __init__.py  openai_vllm_router.py  openhands_eval_launcher_defaults.py  openhands_eval_launcher_defaults.sh  openhands_eval_worker_selection.py  openhands_eval_worker_selection.sh  openhands_swebench_eval.py  pod_git_guard.py  pod_git_guard.sh  pod_startup_common.py  pod_startup_common.sh  pod_utils.py  prebuild_openhands_swebench_images_pod.py  prebuild_openhands_swebench_images_pod.sh  prepare_swehero_historical_one_rollout.py  qwen_agentic_smoke.py  qwen_swehero_gpu_lifecycle_smoke.py  qwen_swehero_logits_parity.py  qwen_swehero_smoke.py  qwen_swehero_train.py  refresh_swehero_context_capped_one_rollout.py  run_midtraining_pod.py  run_midtraining_pod.sh  run_openhands_swebench_eval_pod.py  run_openhands_swebench_eval_pod.sh  run_qwen_swehero_torchtitan_pod.py  run_qwen_swehero_torchtitan_pod.sh  setup_torchtitan_pod_venv.py  setup_torchtitan_pod_venv.sh  validate.py
tests/: test_midtraining_hostpath_manifest.py  test_openai_vllm_router.py  test_openhands_eval_pod_launcher.py  test_openhands_image_prebuild_pod_launcher.py  test_openhands_swebench_eval.py  test_pod_git_guard.py  test_prepare_swehero_historical_one_rollout.py  test_qwen_swehero_gpu_lifecycle_smoke.py  test_qwen_swehero_logits_parity.py  test_qwen_swehero_smoke.py  test_qwen_swehero_train.py  test_refresh_swehero_context_capped_one_rollout.py  test_run_midtraining_pod_launcher.py  test_run_qwen_swehero_torchtitan_pod_wrapper.py  test_swehero_dataloader_resume.py
torchtitan/scripts/: download_hf_assets.py
torchtitan/torchtitan/components/: checkpoint.py
torchtitan/torchtitan/config/: configs.py
torchtitan/torchtitan/distributed/: full_dtensor.py
torchtitan/torchtitan/experiments/: __init__.py
torchtitan/torchtitan/experiments/swehero/: __init__.py  config_registry.py  dataloader.py
torchtitan/torchtitan/models/: __init__.py
torchtitan/torchtitan/models/common/: rmsnorm.py  rope.py
torchtitan/torchtitan/models/llama3/: parallelize.py
torchtitan/torchtitan/models/llama4/: parallelize.py
torchtitan/torchtitan/models/qwen2_5/: __init__.py  state_dict_adapter.py
