[project]
name = "jaxels-work-trial"
version = "0.1.0"
description = "Prototype mid-training and evaluation pipeline for SWE traces."
requires-python = "==3.12.*"
dependencies = []

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.14",
]

[tool.uv]
required-version = "==0.11.16"
package = false
python-preference = "managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "torchtitan",
    "tmp",
    "datasets",
    "outputs",
    "artifacts",
    "runs",
    "eval-runs",
]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T10",
    "T20",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "BLE001",
    "COM812",
    "E501",
    "EM101",
    "EM102",
    "FBT001",
    "FBT002",
    "FBT003",
    "ISC001",
    "PLW1510",
    "RET503",
    "S105",
    "S104",
    "S310",
    "S602",
    "S603",
    "S606",
    "S607",
    "S108",
    "S202",
    "T201",
    "TRY003",
    "TRY004",
    "TRY300",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"scripts/openhands_swebench_eval.py" = [
    "C901",
    "B905",
    "ARG001",
    "PLW2901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLC0415",
    "PYI034",
    "PYI041",
    "RET504",
    "SIM102",
    "SIM105",
]
"scripts/qwen_swehero_train.py" = [
    "C901",
    "B905",
    "ARG001",
    "C401",
    "PERF401",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLC0415",
    "PLW2901",
    "PTH105",
    "PYI034",
    "PYI041",
    "RET504",
    "SIM102",
    "SIM105",
    "UP022",
]
"scripts/prepare_swehero_historical_one_rollout.py" = [
    "PLC0415",
]
"scripts/qwen_swehero_gpu_lifecycle_smoke.py" = [
    "SIM102",
]
"scripts/qwen_swehero_logits_parity.py" = [
    "C401",
    "PLC0415",
    "PLW2901",
]
"scripts/qwen_swehero_smoke.py" = [
    "ARG002",
    "PLC0415",
]
"scripts/refresh_swehero_context_capped_one_rollout.py" = [
    "B007",
    "PLC0415",
]
"scripts/setup_torchtitan_pod_venv.py" = [
    "PLC0415",
]
"tests/**" = [
    "ARG",
    "B905",
    "FBT",
    "FLY",
    "ICN001",
    "INP001",
    "PLC0415",
    "PLR2004",
    "PT011",
    "RUF012",
    "RUF043",
    "S",
    "S101",
    "SIM117",
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
known-third-party = ["datasets", "pyarrow", "torch", "transformers"]

[tool.ruff.format]
line-ending = "lf"
